--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -80,6 +80,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Email Rule"
+                    app:validateEmailRegex='@{"[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+"}'
                     app:validateEmailAutoDismiss="@{true}"/>
 
             </com.google.android.material.textfield.TextInputLayout>
